Add promo video block

--- a/less/blocks/advice.less
+++ b/less/blocks/advice.less
@@ -88,6 +88,11 @@
   width: 100%;
 }
 
+input.advice-form__phone,
+.advice-form__name {
+  text-align: center;
+}
+
 input.advice-form__name {
  margin-bottom: 10px;
 }
