--- a/css/style.css
+++ b/css/style.css
@@ -221,6 +221,10 @@
       justify-content: space-around;
   width: 100%;
 }
+input.advice-form__phone,
+.advice-form__name {
+  text-align: center;
+}
 input.advice-form__name {
   margin-bottom: 10px;
 }
@@ -2363,32 +2367,67 @@ a:active {
     width: 48%;
   }
 }
-.promo-video {
+.promo-video-wrapper {
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-direction: column;
-      flex-direction: column;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: center;
+      justify-content: center;
   -ms-flex-align: center;
       align-items: center;
-  padding-top: 45px;
-  padding-bottom: 20px;
-  background-color: #ffffff;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
-.promo__video-title {
-  margin-bottom: 20px;
-  text-align: center;
-  font-size: 30px;
+.promo-video__content-wrapper {
+  position: relative;
+  width: 80%;
+  margin-bottom: 30px;
+}
+.promo-video__content::before {
+  display: block;
+  content: " ";
+  position: absolute;
+  width: 150%;
+  height: 2px;
+  top: 75px;
+  left: -50%;
+  background-color: #00a3ec;
+}
+.promo-video__title {
+  width: 300px;
+  margin-bottom: 30px;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 24px;
+}
+.promo-video__subtitle {
+  font-weight: 600;
+}
+.promo-video__list li {
+  padding-left: 10px;
+  color: #00a3ec;
+}
+.promo-video__list span {
+  color: #606060;
 }
 .promo__video {
-  text-align: center;
-  width: 90%;
+  width: 80%;
+  padding-top: 30px;
+  padding-right: 30px;
+  padding-bottom: 20px;
+  padding-left: 30px;
+  border: 2px solid #00a3ec;
 }
 .promo__video video {
   width: 100%;
 }
-@media (min-width: 768px) {
+@media (min-width: 940px) {
+  .promo-video__content-wrapper {
+    width: 30%;
+  }
   .promo__video {
-    width: 75%;
+    width: 40%;
   }
 }
 .shop-showcase {
