--- a/less/blocks/welcome-to-shop-slider.less
+++ b/less/blocks/welcome-to-shop-slider.less
@@ -26,8 +26,8 @@
   margin-left: 0;
 }
 
-.carousel-control.left,
-.carousel-control.right {
+.welcome-to-shop .carousel-control.left,
+.welcome-to-shop .carousel-control.right {
   display: none;
   background-image: none;
 }
@@ -87,5 +87,4 @@
   .carousel-inner {
     height: auto;
   }
-
 }
