--- a/less/style.less
+++ b/less/style.less
@@ -3,7 +3,7 @@
 @import "blocks/advantages.less";
 @import "blocks/advice.less";
 @import "blocks/animation.less";
-@import "blocks/answer-main.less";
+@import "blocks/answers-main.less";
 @import "blocks/blog.less";
 @import "blocks/body.less";
 @import "blocks/brand-aquel.less";
@@ -15,6 +15,7 @@
 @import "blocks/container.less";
 @import "blocks/content-navigation.less";
 @import "blocks/contract-offer.less";
+@import "blocks/customer-review-slider.less";
 @import "blocks/dividers.less";
 @import "blocks/feature.less";
 @import "blocks/footer.less";
@@ -34,10 +35,10 @@
 @import "blocks/shop-showcase.less";
 @import "blocks/showcase.less";
 @import "blocks/single-product.less";
-@import "blocks/slider.less";
-@import "blocks/tab-pane.less";
 @import "blocks/tehnology-review.less";
 @import "blocks/tinkoffPaymentForm.less";
 @import "blocks/warranty-and-service.less";
+@import "blocks/welcome-to-shop-slider.less";
 @import "blocks/welcome-to-shop.less";
+@import "blocks/work-process.less";
 @import "variables.less";
