--- a/css/style.css
+++ b/css/style.css
@@ -782,6 +782,23 @@ a:active {
   border-color: #00a3ec;
   transition: all 0.8s;
 }
+.btn--footer-callback {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 200px;
+  background-color: #00a3ec;
+  color: #fff;
+  font-size: 12px;
+  border-radius: 6px;
+  transition: all 0.8s;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
+.btn--footer-callback:hover {
+  color: #fff;
+  background-color: #20baff;
+  border-color: #00a3ec;
+  transition: all 0.8s;
+}
 .btn--welcome-to-shop {
   margin-top: 50px;
   padding-top: 10px;
@@ -1003,7 +1020,7 @@ a:active {
   padding-right: 25px;
   padding-bottom: 10px;
   padding-left: 25px;
-  width: 300px;
+  width: 100%;
   background-color: #00a3ec;
   color: #fff;
   border-color: #00a3ec;
@@ -1032,6 +1049,11 @@ a:active {
   color: #fff !important;
   background-color: #1eb1fc;
   border-color: #1eb1fc;
+}
+@media (min-width: 400px) {
+  .btn-footer__form {
+    width: 300px;
+  }
 }
 @media (min-width: 768px) {
   .btn--introduction-about {
@@ -1406,10 +1428,10 @@ a:active {
   border-bottom: 4px solid #00a3ec;
 }
 .footer__map {
-  width: 50%;
+  display: none;
 }
 .footer__form-contact-wrapper {
-  width: 50%;
+  width: 100%;
   padding-top: 30px;
   padding-right: 30px;
   padding-bottom: 30px;
@@ -1437,8 +1459,6 @@ a:active {
 .footer__form input {
   display: block;
   width: 100%;
-  max-width: 600px;
-  min-width: 300px;
   margin-bottom: 20px;
   padding-top: 5px;
   padding-left: 10px;
@@ -1465,6 +1485,9 @@ a:active {
 .footer__list-item-email {
   position: relative;
 }
+.footer__list-item-email a {
+  color: #777777;
+}
 .footer__list-item-email:before {
   content: " ";
   display: block;
@@ -1486,6 +1509,9 @@ a:active {
 }
 .footer__list-item-phone {
   position: relative;
+}
+.footer__list-item-phone a {
+  color: #777777;
 }
 .footer__list-item-phone::before {
   content: " ";
@@ -1527,6 +1553,169 @@ a:active {
   background-size: contain;
   box-shadow: 1px 0px 10px 0px #00a3ec;
   border-radius: 50%;
+}
+.footer__links-wrapper {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-align: center;
+      align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  max-width: 1300px;
+  margin: 0 auto;
+  padding: 20px;
+  font-size: 12px;
+}
+.footer__catalog {
+  margin: 0 auto;
+}
+.footer__catalog-name {
+  font-weight: 600;
+}
+.footer__catalog-list {
+  display: none;
+  padding-left: 0;
+  list-style: none;
+}
+.footer__catalog-list-item {
+  position: relative;
+  display: inline-block;
+}
+.footer__catalog-list-item:not(:last-child)::after {
+  content: " ";
+  position: absolute;
+  display: inline-block;
+  width: 1px;
+  height: 50%;
+  right: 0;
+  bottom: 10px;
+  background-color: #606060;
+}
+.footer__catalog-list-item a {
+  display: block;
+  padding-top: 5px;
+  padding-right: 10px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  color: #606060;
+  background-color: #fff;
+  border-radius: 6px;
+  transition: all 0.8s;
+}
+.footer__catalog-list-item a:hover {
+  color: #fff;
+  background-color: #00a3ec;
+  transition: all 0.8s;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
+.footer__catalog-list-item a:active {
+  color: #00a3ec;
+  background-color: #fff;
+  transition: all 0.8s;
+}
+.footer__menu {
+  display: none;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  margin: 0 auto;
+}
+.footer__menu-list {
+  display: inline;
+  padding-left: 0;
+  list-style: none;
+}
+.footer__menu-list-item {
+  display: inline-block;
+}
+.footer__menu-list-item a {
+  display: block;
+  padding-top: 5px;
+  padding-right: 10px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+  color: #606060;
+  background-color: #fff;
+  border-radius: 6px;
+  transition: all 0.6s;
+}
+.footer__menu-list-item a:hover {
+  color: #00a3ec;
+  transition: all 0.6s;
+}
+.footer__menu-list-item a:active {
+  color: #00a3ec;
+  transition: all 0.6s;
+}
+.footer__callback {
+  margin: 0 auto;
+}
+.footer__copyright {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-align: center;
+      align-items: center;
+  padding: 10px;
+  color: #fff;
+  background-color: #00a3ec;
+}
+.footer__copyright-content svg {
+  fill: red;
+}
+.footer__copyright-social {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+  width: 250px;
+}
+.footer__copyright-social svg {
+  fill: #fff;
+  transition: all 0.6s;
+}
+.footer__copyright-social svg:hover {
+  fill: #606060;
+  transition: all 0.6s;
+}
+.footer__copyright-social a {
+  display: inline-block;
+  vertical-align: middle;
+  line-height: 0;
+}
+@media (min-width: 550px) {
+  .footer__map {
+    display: block;
+    width: 35%;
+  }
+  .footer__form-contact-wrapper {
+    width: 65%;
+  }
+}
+@media (min-width: 630px) {
+  .footer__menu {
+    display: block;
+  }
+}
+@media (min-width: 700px) {
+  .footer__form-contact-wrapper {
+    width: 50%;
+  }
+  .footer__map {
+    width: 50%;
+  }
+  .footer__form input {
+    max-width: 600px;
+    min-width: 300px;
+  }
+}
+@media (min-width: 1160px) {
+  .footer__catalog-list {
+    display: inline;
+  }
 }
 .header__contact-list {
   background-color: #f7f7f7;
@@ -1600,6 +1789,8 @@ a:active {
 .header__social {
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-align: center;
+      align-items: center;
   margin: 0 auto 5px;
 }
 .header__social svg {
@@ -1608,10 +1799,17 @@ a:active {
 .header__social span {
   margin-right: 20px;
 }
-.header__social a:hover {
-  fill: #1eb1fc;
+.header__social a {
+  color: #606060;
+  transition: all 0.6s;
+}
+.header__social a:hover svg {
+  fill: #00a3ec;
+  transition: all 0.6s;
 }
 .header__social a {
+  display: block;
+  height: 20px;
   margin-right: 20px;
 }
 .header__social a:last-child {
