--- a/less/blocks/button.less
+++ b/less/blocks/button.less
@@ -26,6 +26,29 @@
   }
 }
 
+.btn--footer-callback {
+  padding-top: 10px;
+  padding-bottom: 10px;
+
+  width: 200px;
+
+  background-color: @main-color;
+  color: #fff;
+  font-size: 12px;
+  border-radius: 6px;
+  transition: all 0.8s;
+
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
+  0 2px 10px 0 rgba(0, 0, 0, 0.12);
+
+  &:hover {
+    color: #fff;
+    background-color: lighten(@main-color, 10%);
+    border-color: @main-color;
+    transition: all 0.8s;
+  }
+}
+
 .btn--welcome-to-shop {
   margin-top: 50px;
 
@@ -309,7 +332,7 @@
   padding-bottom: 10px;
   padding-left: 25px;
 
-  width: 300px;
+  width: 100%;
 
   background-color: @main-color;
   color: #fff;
@@ -344,6 +367,13 @@
     color: #fff !important;
     background-color: @style-color;
     border-color: @style-color;
+  }
+}
+
+@media (min-width: 400px) {
+
+  .btn-footer__form {
+    width: 300px;
   }
 }
 
