--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -11,7 +11,7 @@
 }
 
 .footer__map {
-  width: 50%;
+  display: none;
 }
 
 .footer__map img {
@@ -19,7 +19,7 @@
 }
 
 .footer__form-contact-wrapper {
-  width: 50%;
+  width: 100%;
 
   padding-top: 30px;
   padding-right: 30px;
@@ -58,8 +58,6 @@
   display: block;
 
   width: 100%;
-  max-width: 600px;
-  min-width: 300px;
 
   margin-bottom: 20px;
   padding-top: 5px;
@@ -95,6 +93,10 @@
   position: relative;
 }
 
+.footer__list-item-email a {
+  color: #777777;
+}
+
 .footer__list-item-email:before {
   content: " ";
   display: block;
@@ -122,6 +124,10 @@
 
 .footer__list-item-phone {
   position: relative;
+}
+
+.footer__list-item-phone a {
+  color: #777777;
 }
 
 .footer__list-item-phone::before {
@@ -176,4 +182,214 @@
 
   box-shadow: 1px 0px 10px 0px #00a3ec;
   border-radius: 50%;
+}
+
+.footer__links-wrapper {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+
+  max-width: 1300px;
+  margin: 0 auto;
+  padding: 20px;
+
+  font-size: 12px;
+}
+
+.footer__catalog {
+  margin: 0 auto;
+}
+
+.footer__catalog-name {
+  font-weight: 600;
+}
+
+.footer__catalog-list {
+  display: none;
+
+  padding-left: 0;
+  list-style: none;
+}
+
+.footer__catalog-list-item {
+  position: relative;
+  display: inline-block;
+}
+
+.footer__catalog-list-item:not(:last-child)::after {
+  content: " ";
+  position: absolute;
+  display: inline-block;
+
+  width: 1px;
+  height: 50%;
+
+  right: 0;
+  bottom: 10px;
+
+  background-color: @text-color;
+}
+
+.footer__catalog-list-item a {
+  display: block;
+
+  padding-top: 5px;
+  padding-right: 10px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+
+  color: @text-color;
+  background-color: #fff;
+
+  border-radius: 6px;
+
+  transition: all 0.8s;
+
+  &:hover {
+    color: #fff;
+    background-color: @main-color;
+
+    transition: all 0.8s;
+
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
+    0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  }
+
+  &:active {
+    color: @main-color;
+    background-color: #fff;
+    transition: all 0.8s;
+  }
+}
+
+.footer__menu {
+  display: none;
+  align-self: center;
+  margin: 0 auto;
+}
+
+.footer__menu-list {
+  display: inline;
+
+  padding-left: 0;
+  list-style: none;
+}
+
+.footer__menu-list-item {
+  display: inline-block;
+}
+
+.footer__menu-list-item a {
+  display: block;
+
+  padding-top: 5px;
+  padding-right: 10px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+
+  color: @text-color;
+  background-color: #fff;
+
+  border-radius: 6px;
+
+  transition: all 0.6s;
+
+  &:hover {
+    color: @main-color;
+
+    transition: all 0.6s;
+  }
+
+  &:active {
+    color: @main-color;
+    transition: all 0.6s;
+  }
+}
+
+.footer__callback {
+  margin: 0 auto;
+}
+
+.footer__copyright {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  padding: 10px;
+
+  color: #fff;
+  background-color: @main-color;
+}
+
+.footer__copyright-content svg {
+  fill: red;
+}
+
+.footer__copyright-social {
+  display: flex;
+  justify-content: space-between;
+
+  width: 250px;
+}
+
+.footer__copyright-social svg {
+  fill: #fff;
+
+  transition: all 0.6s;
+
+  &:hover {
+    fill: @text-color;
+
+    transition: all 0.6s;
+  }
+}
+
+.footer__copyright-social a {
+  display: inline-block;
+  vertical-align: middle;
+
+  line-height: 0;
+}
+
+@media (min-width: 550px) {
+
+  .footer__map {
+    display: block;
+    width: 35%;
+  }
+
+  .footer__form-contact-wrapper {
+    width: 65%;
+  }
+}
+
+@media (min-width: 630px) {
+
+  .footer__menu {
+    display: block;
+  }
+}
+
+@media (min-width: 700px) {
+
+
+  .footer__form-contact-wrapper {
+    width: 50%;
+  }
+
+  .footer__map {
+    width: 50%;
+  }
+
+  .footer__form input {
+    max-width: 600px;
+    min-width: 300px;
+  }
+}
+
+@media (min-width: 1160px) {
+
+  .footer__catalog-list {
+    display: inline;
+  }
 }
