--- a/less/blocks/header.less
+++ b/less/blocks/header.less
@@ -90,6 +90,7 @@
 
 .header__social {
   display: flex;
+  align-items: center;
 
   margin: 0 auto 5px;
 }
@@ -102,11 +103,21 @@
   margin-right: 20px;
 }
 
-.header__social a:hover {
-  fill: @style-color;
+.header__social a {
+  color: @text-color;
+
+  transition: all 0.6s;
+
+  &:hover svg {
+    fill: @main-color;
+    transition: all 0.6s;
+  }
 }
 
 .header__social a {
+  display: block;
+
+  height: 20px;
   margin-right: 20px;
 }
 
